ci: Fix working directory paths in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./ticketing-app/backend
+        working-directory: backend
     steps:
     - name: Check out repository
       uses: actions/checkout@v4
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./ticketing-app/frontend
+        working-directory: frontend
     steps:
     - name: Check out repository
       uses: actions/checkout@v4
@@ -51,7 +51,7 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
-        cache-dependency-path: ticketing-app/frontend/package-lock.json
+        cache-dependency-path: frontend/package-lock.json
 
     - name: Install dependencies
       run: npm install
