--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
       run: |
         pip install pytest
         pytest
+      env:
+        DATABASE_URL: "sqlite:///:memory:"
 
   build-and-test-frontend:
     runs-on: ubuntu-latest
@@ -51,7 +53,7 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+        cache-dependency-path: ./frontend/package-lock.json
 
     - name: Install dependencies
       run: npm install
