--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,16 @@ services:
     image: postgres:16-alpine
     restart: always
     environment:
-      POSTGRES_DB: ticketing_db
+      POSTGRES_DB: ticketing_dev_db
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       TZ: America/Argentina/Buenos_Aires # Added timezone
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - dev_db_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d ticketing_db"]
+      test:
+        - CMD-SHELL
+        - pg_isready -U user -d ticketing_dev_db
       interval: 5s
       timeout: 5s
       retries: 5
@@ -74,4 +76,4 @@ services:
         max-file: "3"
 
 volumes:
-  db_data:
+  dev_db_data:
